Combine all the Toolbar Consolidation commits...
WIP show toolbar on accession form and disable if there are form changes detected

Rework all toolbars for editable records

Fix a few annoying frontend things... removed namely default values for resource, DO and DOC; fixed subsection button styling in FF; fixed 'alert' exception at end of selenium tests; disable form submit button upon click to stop double posts;

Add 'Save' action to toolbar (from pivotal task request to offer Save action at top of page)

Fix dropdown menus in toolbar appearing offscreen by introducing new dropdown-menu class .open-aligned-right

Fix subrecord-form heading btns losing context (now they are anchors)

--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -9,6 +9,7 @@
         </div>
 
         <div class="span9">
+          <%= render :partial => "accessions/toolbar" %>
           <div class="record-pane">
             <%= link_to_help :topic => "accession" %>
             <h2><%= @accession.title%> <span class="label label-info"><%= I18n.t("accession._html.singular") %></span></h2>
