--- a/frontend/app/views/archival_objects/_edit_inline.html.erb
+++ b/frontend/app/views/archival_objects/_edit_inline.html.erb
@@ -5,6 +5,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <%= render :partial => "archival_objects/form_container", :locals => {:form => form} %>
           <div class="form-actions">
