--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -39,7 +39,7 @@ $(function() {
         $form.data("form_changed", true);
       }
 
-      $form.bind("form-changed", function() {
+      $form.bind("formchanged.aspace", function() {
         $(".btn-primary", $form).removeAttr("disabled");
         $(".btn-cancel", $form).removeAttr("disabled");
       });
@@ -165,7 +165,7 @@ $(function() {
           type: "GET",
           success: function(html) {
             initForm(html);
-            $("form", $container).triggerHandler("form-changed");
+            $("form", $container).triggerHandler("formchanged.aspace");
           },
           error: function() {
             $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
