--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -77,35 +77,39 @@ h2 > .label {
 }
 
 .btn-toolbar >.btn-group + .btn-group {
-  margin-left: -5px;
+  margin-left: -1px;
 }
 
 .btn-toolbar > .btn-group > .btn, 
 .btn-toolbar > .btn-group > .dropdown-toggle
 {
-  -webkit-border-radius: 0px;
-  border-radius: 0px;
-  -moz-border-radius: 0px;
+  .border-radius(0);
 }
 
 .btn-toolbar > .btn-group:first-child > .btn, 
 .btn-toolbar > .btn-group:first-child > .dropdown-toggle{
-  -webkit-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  -webkit-border-top-left-radius: 4px;
-  border-top-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 4px;    
+  .border-radius(4px);
 }
 
 .btn-toolbar > .btn-group:last-child > .btn:last-child, 
 .btn-toolbar > .btn-group:last-child > .dropdown-toggle:nth-last-child(2){
-  -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  -webkit-border-top-right-radius: 4px;
-  border-top-right-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  -moz-border-radius-topright: 4px;    
+  .border-radius(4px);
+}
+
+.btn-toolbar > .btn-group {
+  &:first-child > .btn:first-child {
+    .border-radius(4px 0 0 4px);
+  }
+
+  .btn-inline-form .btn {
+    .border-radius(0);
+  }
+  &:first-child .btn-inline-form:first-child .btn {
+    .border-radius(4px 0 0 4px);
+  }
+  .btn-inline-form:last-child .btn {
+    .border-radius(0 4px 4px 0);
+  }
 }
 
 .btn.btn-mini {
@@ -164,6 +168,11 @@ h2 > .label {
   font-size: @baseFontSize;
 }
 
+.dropdown-menu.open-aligned-right {
+  left: auto;
+  right: 0;
+}
+
 .record-toolbar {
   padding: 4px 5px;
   position: relative;
@@ -173,6 +182,20 @@ h2 > .label {
   #gradient > .vertical(#F3F3F3, #EDEDED);
   .box-shadow(~"1px 1px 2px rgba(0,0,0,.15)");
   min-height: 2em;
+
+  .btn-toolbar {
+    margin: 0;
+  }
+
+  .revert-changes {
+    display: none;
+  }
+
+  &.formchanged {
+    .revert-changes {
+      display: block;
+    }
+  }
 }
 
 .record-pane {
@@ -192,7 +215,7 @@ h2 > .label {
   margin: 0;
   padding: 10px !important;
   border: 1px solid #E5E5E5;
-  border-radius: 0 0 4px 4px;
+  .border-radius(0 0 4px 4px);
 
   .btn-primary {
     width: 100%;
