--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -124,10 +124,12 @@ form .control-group {
 
 .record-pane section h3 .btn.pull-right {
   margin: 6px 6px 0 0;
+  font-weight: normal;
 }
 
 .record-pane section section h4 .btn.pull-right {
   margin: 2px 6px 0 0;
+  font-weight: normal;
 }
 
 .subrecord-form.error {
