--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -2,67 +2,81 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
-        <div class="pull-right">
-          <div class="btn-group">
-            <% if not @accession.suppressed %>
+        <% if not @accession.suppressed %>
+          <% if !['edit', 'update'].include?(controller.action_name) %>
+            <div class="btn-group pull-left">
+              <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small btn-primary" %>
+            </div>
+          <% end %>
+        <% end %>
+        <% if ['new', 'create', 'edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left save-changes">
+            <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
+          </div>
+        <% end %>
+        <% if ['edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left revert-changes">
+            &#180;
+            <%= link_to I18n.t("actions.revert"), {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small" %>
+            <%= I18n.t("actions.toolbar_disabled_message") %>
+          </div>
+        <% end %>
+        <div class="btn-toolbar pull-right">
+          <% if @accession_event_types && !@accession.suppressed %>
+            <div class="btn-group">
               <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
                 <%= I18n.t("actions.add_event") %>
                 <span class="caret"></span>
               </a>
-              <% if @accession_event_types %>
-                <ul class="dropdown-menu">
-                  <% @accession_event_types.each do |type| %>
-                    <li>
-                      <%= link_to I18n.t("event.types.#{type}"), {:controller => :events, :action => :new, :event_type => type, :accession_uri => @accession.uri} %>
-                    </li>
-                  <% end %>
-                </ul>                
-              <% end %>
-            <% end %>
-          </div>
+              <ul class="dropdown-menu open-aligned-right">
+                <% @accession_event_types.each do |type| %>
+                  <li>
+                    <%= link_to I18n.t("event.types.#{type}"), {:controller => :events, :action => :new, :event_type => type, :accession_uri => @accession.uri} %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-          <div class="btn-group">
-            <% if not @accession.suppressed %>
-              <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn btn-small" %>
+          <% if not @accession.suppressed %>
+            <div class="btn-group">
               <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
                 <%= I18n.t "actions.spawn" %>
                 <span class="caret"></span>
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu open-aligned-right">
                 <li>
                   <%= link_to "<span class='icon-resource'></span> #{I18n.t("resource._html.singular")}".html_safe, :controller => :resources, :action => :new, :accession_id => @accession.id %>
                 </li>
               </ul>
-            <% end %>
-          </div>
-          <% if user_can?('suppress_archival_record') %>
-            <% if @accession.suppressed %>
-              <div class="btn-group">
-                <div class="btn btn-small btn-inline-form">
-                  <%= button_to I18n.t("actions.unsuppress"),
-                       {:controller => :accessions, :action => :unsuppress, :id => @accession.id},
-                       :method => :post,
-                       :class => "btn btn-small btn-primary unsuppress-record",
-                       :"data-confirmation" => true,
-                       :"data-title" => I18n.t("actions.unsuppress_confirm_title"),
-                       :"data-message" => I18n.t("actions.unsuppress_confirm_message"),
-                       :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}"
-                  %>
-                </div>
-              </div>
-            <% else %>
-              <div class="btn-group">
-                <div class="btn btn-inline-form">
-                  <%= button_to I18n.t("actions.suppress"), {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning suppress-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.suppress_confirm_title"), :"data-message" => I18n.t("actions.suppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}", :"data-confirm-btn-class" => "btn-warning" %>
-                </div>
-              </div>
-            <% end %>
+            </div>
           <% end %>
-          <% if user_can?('delete_archival_record') %>
+          <% if user_can?('suppress_archival_record') || user_can?('delete_archival_record') %>
             <div class="btn-group">
-              <div class="btn btn-inline-form">
-                <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
-              </div>
+              <% if user_can?('suppress_archival_record') %>
+                <% if @accession.suppressed %>
+                  <div class="btn btn-small btn-inline-form">
+                    <%= button_to I18n.t("actions.unsuppress"),
+                                  {:controller => :accessions, :action => :unsuppress, :id => @accession.id},
+                                  :method => :post,
+                                  :class => "btn btn-small btn-primary unsuppress-record",
+                                  :"data-confirmation" => true,
+                                  :"data-title" => I18n.t("actions.unsuppress_confirm_title"),
+                                  :"data-message" => I18n.t("actions.unsuppress_confirm_message"),
+                                  :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}"
+                    %>
+                  </div>
+                <% else %>
+                  <div class="btn btn-inline-form">
+                    <%= button_to I18n.t("actions.suppress"), {:controller => :accessions, :action => :suppress, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-warning suppress-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.suppress_confirm_title"), :"data-message" => I18n.t("actions.suppress_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}", :"data-confirm-btn-class" => "btn-warning" %>
+                  </div>
+                <% end %>
+              <% end %>
+              <% if user_can?('delete_archival_record') %>
+                <div class="btn btn-inline-form">
+                  <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+                </div>
+              <% end %>
             </div>
           <% end %>
         </div>
