--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -5,12 +5,18 @@
       <%= render :partial => "search/filter" %>
   </div>
   <div class="span9">
-    <div class="record-pane">
-      <div class="btn-group pull-right">
-        <% if user_can?('update_archival_record') %>
-          <%= link_to "Create Accession", {:controller => :accessions, :action => :new}, :class => "btn" %>
-        <% end %>
+    <% if user_can?('update_archival_record') %>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="record-toolbar">
+            <div class="btn-group pull-right">
+              <%= link_to "Create Accession", {:controller => :accessions, :action => :new}, :class => "btn btn-small" %>
+            </div>
+          </div>
+        </div>
       </div>
+    <% end %>
+    <div class="record-pane">
       <h2><%= I18n.t("accession._html.plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
