--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -9,24 +9,30 @@
     <%= render :partial => "search/filter" %>
   </div>
   <div class="span9">
-    <div class="record-pane">
-      <div class="btn-group pull-right">
-        <% if user_can?('update_archival_record') %>
-          <div class="btn-group pull-right">
-            <div class="btn-group">
-              <% if user_can?('update_agent_record') %>
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                  <%= I18n.t("actions.create") %> <%= I18n.t("agent._html.singular") %>
-                  <span class="caret"></span>
-                </a>
-              <% end %>
+    <% if user_can?('update_agent_record') %>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="record-toolbar">
+            <div class="btn-group pull-right">
+              <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
+                <%= I18n.t("actions.create") %> <%= I18n.t("agent._html.singular") %>
+                <span class="caret"></span>
+              </a>
               <ul class="dropdown-menu">
                 <li><%= link_to I18n.t("agent_person._html.singular"), :controller => :agents, :action => :new, :type => :agent_person %></li>
                 <li><%= link_to I18n.t("agent_family._html.singular"), :controller => :agents, :action => :new, :type => :agent_family %></li>
                 <li><%= link_to I18n.t("agent_corporate_entity._html.singular"), :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
                 <li><%= link_to I18n.t("agent_software._html.singular"), :controller => :agents, :action => :new, :type => :agent_software %></li>
               </ul>
-            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <div class="record-pane">
+      <div class="btn-group pull-right">
+        <% if user_can?('update_archival_record') %>
+          <div class="btn-group pull-right">
+
           </div>
         <% end %>
       </div>
