--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -7,6 +7,7 @@
         <%= render :partial => "sidebar", :locals => {:form => form} %>
       </div>
       <div class="span9">
+        <%= render :partial => "shared/toolbar_new_records" %>
         <div class="record-pane">
           <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
           <%= render :partial => "agents/form", :locals => {:form => form} %>
