--- a/frontend/app/views/digital_object_components/_toolbar.html.erb
+++ b/frontend/app/views/digital_object_components/_toolbar.html.erb
@@ -2,11 +2,23 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
-        <div class="pull-right">
-          <div class="btn-group">
-            <%= link_to I18n.t("actions.edit"), {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
+        <% if !['edit', 'update', 'create'].include?(controller.action_name) %>
+          <div class="btn-group pull-left">
+            <%= link_to I18n.t("actions.edit"), {:controller => :digital_objects, :action => :edit, :id => JSONModel(:digital_object).id_for(@digital_object_component.digital_object["ref"]), :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small btn-primary" %>
           </div>
-        </div>
+        <% end %>
+        <% if ['new', 'create', 'edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left save-changes">
+            <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
+          </div>
+        <% end %>
+        <% if ['edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left revert-changes">
+            &#180;
+            <%= link_to I18n.t("actions.revert"), {:controller => :digital_objects, :action => :edit, :id => JSONModel(:digital_object).id_for(@digital_object_component.digital_object["ref"]), :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
+            <%= I18n.t("actions.form_changes_message") %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
