--- a/frontend/app/views/digital_objects/new.html.erb
+++ b/frontend/app/views/digital_objects/new.html.erb
@@ -7,8 +7,12 @@
           <%= render :partial => "digital_objects/sidebar" %>
        </div> <!-- span3 -->
       <div class="span9">
+        <%= render :partial => "shared/toolbar_new_records" %>
         <div class="record-pane" id="object_container">
-          <h2><%= @digital_object.title %>  <span class="label label-info"><%= I18n.t("digital_object._html.singular") %></span></h2>
+          <h2>
+            <%= @digital_object.title.blank? ? I18n.t("digital_object._html.singular") : @digital_object.title %>
+            <span class="label label-info"><%= I18n.t("digital_object._html.singular") %></span>
+          </h2>
 
            <%= render :partial => "digital_objects/form_container", :locals => {:form => form} %>
 
