--- a/frontend/app/views/enumerations/_list.html.erb
+++ b/frontend/app/views/enumerations/_list.html.erb
@@ -1,9 +1,16 @@
 <hr/>
-<div class="btn-group pull-right">
-  <% if @enumeration['editable']%>
-    <%= link_to "#{I18n.t("actions.create")} #{I18n.t("enumeration.value")}", {:controller => :enumerations, :action => :new, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, "data-toggle" => "modal-ajax", :class=> "btn" %>
-  <% end %>
-</div>
+<% if @enumeration['editable']%>
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="record-toolbar">
+        <div class="btn-group pull-right">
+          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("enumeration.value")}", {:controller => :enumerations, :action => :new, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, "data-toggle" => "modal-ajax", :class=> "btn btn-small" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 
 <h2><%= I18n.t("enumeration._html.singular") %>: <%= @enumeration["name"] %></h2>
 
