--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -5,11 +5,17 @@
    </div>
 
   <div class="span9">
-    <div class="record-pane">
-     <div class="btn-group pull-right">
-       <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._html.singular")}", {:controller => :groups, :action => :new}, :class => "btn" %>
-     </div>
+    <div class="row-fluid">
+      <div class="span12">
+        <div class="record-toolbar">
+          <div class="btn-group pull-right">
+            <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._html.singular")}", {:controller => :groups, :action => :new}, :class => "btn btn-small" %>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="record-pane">
      <h2><%= I18n.t("group._html.plural") %></h2>
 
      <table class="table table-striped table-bordered table-condensed">
@@ -24,7 +30,7 @@
          <tr>
            <td><%= group.description %> <small>(<%= group.group_code %>)</small></td>
            <td>
-             <%= link_to I18n.t("actions.edit"), {:controller => :groups, :action => :edit, :id => group.id}, :class => "btn btn-mini" %>
+             <%= link_to I18n.t("actions.edit"), {:controller => :groups, :action => :edit, :id => group.id}, :class => "btn btn-mini btn-primary" %>
            </td>
          </tr>
          <% end %>
