--- a/frontend/app/views/locations/_toolbar.html.erb
+++ b/frontend/app/views/locations/_toolbar.html.erb
@@ -2,9 +2,9 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
-        <div class="pull-right">
+        <div class="pull-left">
           <div class="btn-group">
-            <%= link_to I18n.t("actions.edit"), {:controller => :locations, :action => :edit, :id => @location.id}, :class => "btn btn-small" %>
+            <%= link_to I18n.t("actions.edit"), {:controller => :locations, :action => :edit, :id => @location.id}, :class => "btn btn-small btn-primary" %>
           </div>
         </div>
       </div>
