--- a/frontend/app/views/repositories/_toolbar.html.erb
+++ b/frontend/app/views/repositories/_toolbar.html.erb
@@ -1,18 +1,18 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="record-toolbar">
-      <div class="pull-right">
-          <% if session[:repo_id] != @repository.id and @repositories.any?{|r| r['uri'] === @repository.uri} %>
-            <%= form_for @repository, :as => "repository", :url => {:action => :select}, :html => {:style => "display: inline;"} do |f| %>
-              <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._html.action.select") %></button>
-            <% end %>
-          <% end %>
-          <% if user_can?('create_repository') %>
-            <div class="btn-group">
-              <%= link_to I18n.t("actions.edit"), {:controller => :repositories, :action => :edit, :id => @repository.id}, :class => "btn btn-small" %>
-            </div>
-          <% end %>
+      <% if user_can?('create_repository') %>
+        <div class="btn-group pull-left">
+          <%= link_to I18n.t("actions.edit"), {:controller => :repositories, :action => :edit, :id => @repository.id}, :class => "btn btn-small btn-primary" %>
         </div>
+      <% end %>
+      <div class="pull-right">
+        <% if session[:repo_id] != @repository.id and @repositories.any?{|r| r['uri'] === @repository.uri} %>
+          <%= form_for @repository, :as => "repository", :url => {:action => :select}, :html => {:style => "display: inline;"} do |f| %>
+            <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._html.action.select") %></button>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
