--- a/frontend/app/views/repositories/index.html.erb
+++ b/frontend/app/views/repositories/index.html.erb
@@ -5,12 +5,19 @@
     <%= render :partial => "search/filter" %>
   </div>
   <div class="span9">
-    <div class="record-pane">
-      <div class="btn-group pull-right">
-        <% if user_can?('manage_repository') %>
-          <%= link_to "Create Repository", {:controller => :repositories, :action => :new}, :class => "btn" %>
-        <% end %>
+    <% if user_can?('manage_repository') %>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="record-toolbar">
+            <div class="btn-group pull-right">
+              <%= link_to "#{I18n.t("actions.create")} #{I18n.t("repository._html.singular")}", {:controller => :repositories, :action => :new}, :class => "btn btn-small" %>
+            </div>
+          </div>
+        </div>
       </div>
+    <% end %>
+
+    <div class="record-pane">
       <h2><%= I18n.t("repository._html.plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
