--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -5,6 +5,7 @@
         <%= render :partial => "resources/sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "toolbar" %>
         <div class="record-pane">
            <%= render :partial => "resources/form_container", :locals => {:form => form} %>
            <div class="form-actions">
