--- a/frontend/app/views/resources/_toolbar.html.erb
+++ b/frontend/app/views/resources/_toolbar.html.erb
@@ -2,18 +2,34 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
-        <div class="pull-right">
-          <div class="btn-group">
-            <%= link_to I18n.t("actions.edit"), {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
+        <% if !['edit', 'update', 'create'].include?(controller.action_name) %>
+          <div class="btn-group pull-left">
+            <%= link_to I18n.t("actions.edit"), {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small btn-primary" %>
           </div>
-          <div class="btn-group">
-            <%= link_to I18n.t("actions.export_ead"), {:controller => :exports, :action => :download_ead, :id => @resource.id}, :class => "btn btn-small" %>
+        <% end %>
+        <% if ['new', 'create', 'edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left save-changes">
+            <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
           </div>
-          <div class="btn-group">
-            <%= link_to I18n.t("actions.export_marc"), {:controller => :exports, :action => :download_marc, :id => @resource.id}, :class => "btn btn-small" %>
+        <% end %>
+        <% if ['edit', 'update'].include?(controller.action_name) %>
+          <div class="pull-left revert-changes">
+            &#180;
+            <%= link_to I18n.t("actions.revert"), {:controller => :resources, :action => :edit, :id => @resource.id}, :class => "btn btn-small" %>
+            <%= I18n.t("actions.toolbar_disabled_message") %>
           </div>
+        <% end %>
+        <div class="btn-toolbar pull-right">
           <div class="btn-group">
-            <%= link_to I18n.t("actions.container_labels"), {:controller => :exports, :action => :container_labels, :id => @resource.id}, :class => "btn btn-small" %>
+            <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= I18n.t("actions.export") %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu open-aligned-right">
+              <li><%= link_to I18n.t("actions.export_ead"), {:controller => :exports, :action => :download_ead, :id => @resource.id} %></li>
+              <li><%= link_to I18n.t("actions.export_marc"), {:controller => :exports, :action => :download_marc, :id => @resource.id} %></li>
+              <li><%= link_to I18n.t("actions.container_labels"), {:controller => :exports, :action => :container_labels, :id => @resource.id} %></li>
+            </ul>
           </div>
         </div>
       </div>
