--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -5,14 +5,20 @@
       The facets/search filters will go here.
    </div>
    <div class="span9">
-    <div class="record-pane">
-      <div class="btn-group pull-right">
-        <% if user_can?('update_subject_record') %>
-          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("subject._html.singular")}", {:controller => :subjects, :action => :new}, :class => "btn" %>
-        <% end %>
-      </div>
+     <% if user_can?('update_subject_record') %>
+       <div class="row-fluid">
+         <div class="span12">
+           <div class="record-toolbar">
+             <div class="btn-group pull-right">
+               <%= link_to "#{I18n.t("actions.create")} #{I18n.t("subject._html.singular")}", {:controller => :subjects, :action => :new}, :class => "btn btn-small" %>
+             </div>
+           </div>
+         </div>
+       </div>
+     <% end %>
 
-      <h2><%= I18n.t("subject._html.plural") %></h2>
+    <div class="record-pane">
+     <h2><%= I18n.t("subject._html.plural") %></h2>
 
      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
        <table class="table table-striped table-bordered table-condensed">
