--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -3,14 +3,19 @@
 <div class="row-fluid">
    <div class="span3"></div>
    <div class="span9">
+     <% if not @manage_access %>
+       <div class="row-fluid">
+         <div class="span12">
+           <div class="record-toolbar">
+             <div class="btn-group pull-right">
+               <%= link_to "#{I18n.t("actions.create")} #{I18n.t("user._html.singular")}", {:controller => :users, :action => :new}, :class => "btn btn-small" %>
+             </div>
+           </div>
+         </div>
+       </div>
+     <% end %>
+
     <div class="record-pane">
-
-      <% if not @manage_access %>
-        <div class="btn-group pull-right">
-          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("user._html.singular")}", {:controller => :users, :action => :new}, :class => "btn" %>
-        </div>
-      <% end %>
-
       <h2><%= @manage_access ? I18n.t("user._html.section.manage_access") : I18n.t("user._html.plural") %></h2>
 
       <% if flash[:success] %>
@@ -36,7 +41,7 @@
                    <% if @manage_access %>
                     <%= link_to I18n.t("actions.edit_groups"), {:controller => :users, :action => :edit_groups, :id => user.id}, :class => "btn btn-mini" %>
                    <% else %>
-                    <%= link_to I18n.t("actions.edit"), {:controller => :users, :action => :edit, :id => user.id}, :class => "btn btn-mini" %>
+                    <%= link_to I18n.t("actions.edit"), {:controller => :users, :action => :edit, :id => user.id}, :class => "btn btn-mini btn-primary" %>
                    <% end %>
                  </div>
               </td>
