--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 
 <div class="row-fluid">
    <div class="span12">
+     <%= render :partial => "shared/toolbar_new_records" %>
      <div class="record-pane">
        <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("user._html.section.account") %></h2>
        <%= form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
