View changes (textfields to textareas, enum fixes)
Delivers #46217967, #43820677, #49079625

* Use textareas for `title` properties (acccesions; archival objects;
  digital objects; digital object components; resources)
* Use textareas for `date.expression`, `extent.container_summary`,
  `extent.physical_details`, and `extent.dimensions`
* Make `file_versions` template use `file_versions_file_format_name`
  enum instead of text field (see #46673841)
* Make `digital_objects.level` allow null values
* Translation edits: `digital_object.level`, `date.certainty_tooltip`,
  `date.era_tooltip`

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -7,7 +7,7 @@
       <%= link_to_help :topic => "accession_basic_information" %>
     </h3>
     <fieldset>
-       <%= form.label_and_textfield "title" %>
+       <%= form.label_and_textarea "title" %>
        <%= form.label_and_fourpartid %>
        <%= form.label_and_date "accession_date", {:field_opts => {:value => (@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))}} %>
        <%= form.label_and_textarea "content_description" %>
