--- a/frontend/app/views/file_versions/_template.html.erb
+++ b/frontend/app/views/file_versions/_template.html.erb
@@ -5,7 +5,7 @@
     <%= form.label_and_select("use_statement", form.possible_options_for("use_statement", true)) %>
     <%= form.label_and_select("xlink_actuate_attribute", form.possible_options_for("xlink_actuate_attribute", true)) %>
     <%= form.label_and_select("xlink_show_attribute", form.possible_options_for("xlink_show_attribute", true)) %>
-    <%= form.label_and_textfield("file_format_name") %>
+    <%= form.label_and_select("file_format_name", form.possible_options_for("file_format_name", true)) %>
     <%= form.label_and_textfield("file_format_version") %>
     <%= form.label_and_textfield("file_size_bytes") %>
 
