--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -51,7 +51,7 @@
   <div class="subrecord-form-fields">
     <div class="date-container">
       <%= form.label_and_select "label", form.possible_options_for("label") %>
-      <%= form.label_and_textfield "expression", {:field_opts => {:placeholder => "Describe the date or date range"}} %>
+      <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}} %>
 
       <%= form.label_and_select "date_type", form.possible_options_for("date_type", true) %>
 
