--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -14,7 +14,7 @@
     <section id="basic_information">
       <h3><%= I18n.t("digital_object_component._html.section.basic_information") %></h3>
       <%= form.label_and_textfield "label" %>
-      <%= form.label_and_textfield "title" %>
+      <%= form.label_and_textarea "title" %>
       <%= form.label_and_textfield "component_id" %>
       <%= form.label_and_boolean "publish", {}, form.default_for("default") %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
