--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -11,7 +11,7 @@
           <h3><%= I18n.t("digital_object_component._html.section.basic_information") %></h3>
   
           <%= readonly.label_and_textfield "label" %>
-          <%= readonly.label_and_textfield "title" %>
+          <%= readonly.label_and_textarea "title" %>
           <%= readonly.label_and_textfield "component_id" %>
           <%= readonly.label_and_boolean "publish" %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
