--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -7,10 +7,10 @@
   <% define_template "digital_object", jsonmodel_definition(:digital_object) do |form| %>
     <section id="basic_information">
       <h3><%= I18n.t("digital_object._html.section.basic_information") %></h3>
-      <%= form.label_and_textfield "title" %>
+      <%= form.label_and_textarea "title" %>
       <%= form.label_and_textfield "digital_object_id" %>
       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
-      <%= form.label_and_select "level", form.possible_options_for("level") %>
+      <%= form.label_and_select "level", form.possible_options_for("level", true) %>
       <%= form.label_and_select "digital_object_type", form.possible_options_for("digital_object_type") %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
       <%= form.label_and_boolean "restrictions", {}, form.default_for("restrictions") %>
