--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -10,7 +10,7 @@
         <section id="basic_information">
           <h3><%= I18n.t("digital_object._html.section.basic_information") %></h3>
   
-          <%= readonly.label_and_textfield "title" %>
+          <%= readonly.label_and_textarea "title" %>
           <%= readonly.label_and_textfield "digital_object_id" %>
           <%= readonly.label_and_boolean "publish" %>
           <%= readonly.label_and_select "level", readonly.possible_options_for("level") %>
