--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -12,7 +12,7 @@
           <section id="basic_information">
             <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
     
-            <%= form.label_and_textfield "title" %>
+            <%= form.label_and_textarea "title" %>
             <% if resource.id_0 %><%= form.label_and_fourpartid %><% end %>
             <%= form.label_and_select "level", form.possible_options_for("level", true) %>
             <%= form.label_and_textfield "other_level" %>
