Change Subject.ref_id to Subject.authority_id

--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -16,7 +16,7 @@
         <section id="basic_information">
           <h3><%= I18n.t("subject._html.section.basic_information") %></h3>
 
-          <%= form.label_and_textfield "ref_id" %>
+          <%= form.label_and_textfield "authority_id" %>
           <%= form.label_and_select "source", form.possible_options_for("source", true) %>
           <%= form.label_and_textarea "scope_note" %>
         </section>
