--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -7,7 +7,7 @@
   <% define_template "subject", jsonmodel_definition(:subject) do |form| %>
     <section id="basic_information">
       <h3><%= I18n.t("subject._html.section.basic_information") %></h3>
-      <%= form.label_and_textfield "ref_id" %>
+      <%= form.label_and_textfield "authority_id" %>
       <%= form.label_and_select "source", form.possible_options_for("source", true) %>
       <%= form.label_and_textarea "scope_note" %>
     </section>
