--- a/frontend/app/views/agents/name_forms/_agent_family.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_family.html.erb
@@ -1,15 +1,15 @@
 <% define_template "name_family", jsonmodel_definition(:name_family) do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_textfield "authority_id" %>
-    <%= form.label_and_select "source", form.possible_options_for('source', true) %>
-    <%= form.label_and_select "rules", form.possible_options_for('rules', true) %>
+    <%= form.label_and_select "source", form.possible_options_for('source', true), :required => :conditionally %>
+    <%= form.label_and_select "rules", form.possible_options_for('rules', true), :required => :conditionally %>
     <hr/>
     <%= form.label_and_textfield "prefix" %>
     <%= form.label_and_textfield "family_name" %>
     <%= form.label_and_textfield "dates" %>
     <hr/>
     <%= form.label_and_textfield "qualifier" %>
-    <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}}%>
+    <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}, :required => :conditionally}%>
     <%= form.label_and_textfield "sort_name" %>
   </div>
 <% end %>
