--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -1,8 +1,8 @@
 <% define_template "name_person", jsonmodel_definition(:name_person) do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_textfield "authority_id" %>
-    <%= form.label_and_select "source", form.possible_options_for('source', true) %>
-    <%= form.label_and_select "rules", form.possible_options_for('rules', true) %>
+    <%= form.label_and_select "source", form.possible_options_for('source', true), :required => :conditionally %>
+    <%= form.label_and_select "rules", form.possible_options_for('rules', true), :required => :conditionally %>
     <hr/>
     <%= form.label_and_select "name_order", form.possible_options_for("name_order") %>
     <%= form.label_and_textfield "prefix" %>
@@ -15,6 +15,6 @@
     <%= form.label_and_textfield "dates" %>
     <hr/>
     <%= form.label_and_textfield "qualifier" %>
-    <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}}%>
+    <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}, :required => :conditionally}%>
   </div>
 <% end %>
