--- a/frontend/app/views/events/_record_linker.html.erb
+++ b/frontend/app/views/events/_record_linker.html.erb
@@ -5,7 +5,7 @@
      selected_json =  form.obj['_resolved'].to_json
    end
 %>
-<div class="control-group">
+<div class="control-group required">
   <label class="control-label"><%= I18n.t("linked_record.ref") %></label>
   <div class="controls">
     <div class="input-append linker-wrapper">
