--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form.label_and_textfield "description" %>
+<%= form.label_and_textfield "description", :required => true %>
 
 <div class="control-group group-member-control-group">
   <label for="group_member_usernames_" class="control-label"><%= I18n.t("group.member_usernames") %></label>
