--- a/frontend/app/views/resources/_linker.html.erb
+++ b/frontend/app/views/resources/_linker.html.erb
@@ -7,7 +7,7 @@
 
    exclude_ids = [] if exclude_ids.blank?
 %>
-<div class="control-group">
+<div class="control-group required">
    <label class="control-label"><%= I18n.t("resource._html.singular") %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
