--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -9,7 +9,7 @@
   data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
 %>
 
-<div class="control-group">
+<div class="control-group required">
    <label class="control-label"><%= I18n.t("subject._html.singular") %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
