--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -5,7 +5,7 @@
      selected_json = "{}"
    end
 %>
-<div class="control-group">
+<div class="control-group required">
    <label class="control-label"><%= I18n.t "accession._html.singular" %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
