--- a/frontend/app/views/collection_management/_template.html.erb
+++ b/frontend/app/views/collection_management/_template.html.erb
@@ -1,8 +1,8 @@
 <% define_template("collection_management", jsonmodel_definition(:collection_management)) do |form| %>
       <%= form.label_and_textarea "cataloged_note" %>
       <%= form.label_and_textfield "processing_hours_per_foot_estimate" %>
-      <%= form.label_and_textfield "processing_total_extent" %>
-      <%= form.label_and_select "processing_total_extent_type", form.possible_options_for("processing_total_extent_type", true) %>
+      <%= form.label_and_textfield "processing_total_extent", :required => :conditionally %>
+      <%= form.label_and_select "processing_total_extent_type", form.possible_options_for("processing_total_extent_type", true), :required => :conditionally %>
       <%= form.label_and_textfield "processing_hours_total" %>
       <%= form.label_and_textarea "processing_plan" %>
       <%= form.label_and_select "processing_priority", form.possible_options_for("processing_priority", true) %>
