--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -17,7 +17,7 @@
   <h3><%= I18n.t("event.date") %></h3>
   <%= form.label_and_select "chronotype_label", ['subrecord', 'timestamp'].map{|t| [I18n.t("event.chronotype.#{t}"), t]}, 'required' => true %>
   <div id="chronotype_timestamp" class="chronotype_form">
-    <%= form.label_and_textfield "timestamp" %>
+    <%= form.label_and_textfield "timestamp", :required => true %>
   </div>
   <div id="chronotype_subrecord" class="chronotype_form">
     <%= form.fields_for(@event.date || {}, "date") do | date | %>
