--- a/frontend/app/views/groups/new.erb
+++ b/frontend/app/views/groups/new.erb
@@ -10,7 +10,7 @@
       <%= form_for @group, :as => "group", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
         <%= form_context :group, @group do |form| %>
           <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
-          <%= form.label_and_textfield :group_code %>
+          <%= form.label_and_textfield :group_code, :required => true %>
           <%= render :partial => "groups/form", :locals => {:form => form} %>
         <% end %>
       <% end %>
