--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -2,7 +2,7 @@
 
 <section id="notes" class="subrecord-form">
   <h3 class="subrecord-form-heading">
-    <%= I18n.t("note._html.plural") %>
+    <%= wrap_with_tooltip(I18n.t("note._html.plural"), "#{form.i18n_for('notes')}_tooltip", "subrecord-form-heading-label") %>
     <button class="btn btn-small pull-right"><%= I18n.t("actions.add") %> <%= I18n.t("note._html.singular") %></button>
   </h3>
   <div class="subrecord-form-container">
