--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -17,7 +17,7 @@
       <%= form.label_and_textarea "title" %>
       <%= form.label_and_fourpartid %>
       <%= form.label_and_select "level", form.possible_options_for("level", true) %>
-      <%= form.label_and_textfield "other_level" %>
+      <%= form.label_and_textfield "other_level", :required => true %>
       <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
       <%= form.label_and_textarea "container_summary" %>
