Added delete buttons to the UI

--- a/frontend/app/views/events/edit.html.erb
+++ b/frontend/app/views/events/edit.html.erb
@@ -7,6 +7,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <h2><%= I18n.t("event._singular") %> <%= @event.id %>  <span class="label label-info"><%= I18n.t("event._singular") %></span></h2>
 
