--- a/frontend/app/views/digital_object_components/_toolbar.html.erb
+++ b/frontend/app/views/digital_object_components/_toolbar.html.erb
@@ -19,6 +19,14 @@
             <%= I18n.t("actions.form_changes_message") %>
           </div>
         <% end %>
+        <% if user_can?('delete_archival_record') %>
+          <div class="btn-group pull-right">
+            <div class="btn btn-inline-form">
+              <%= button_to I18n.t("actions.delete"), {:controller => :digital_object_components, :action => :delete, :id => @digital_object_component.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+            </div>
+          </div>
+        <% end %>
+
       </div>
     </div>
   </div>
