--- a/frontend/app/views/repositories/_toolbar.html.erb
+++ b/frontend/app/views/repositories/_toolbar.html.erb
@@ -12,6 +12,13 @@
             <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._frontend.action.select") %></button>
           <% end %>
         <% end %>
+        <% if user_can?('delete_repository') %>
+          <div class="btn-group">
+            <div class="btn btn-inline-form">
+              <%= button_to I18n.t("actions.delete"), {:controller => :repositories, :action => :delete, :id => @repository.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
