Paginate repositories list in the public app; Also ensure the Resource's Finding Aid Title is used for breadcrumbs and search results labels when Finding Aid Status == completed;

--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
   <div class="container">
     <% if !current_page?(root_url) %>
-      <div class="advanced-search-container <% if not params["advanced"] %>hide<% end %>">
+      <div class="advanced-search-container <% if params["advanced"].blank? or params["advanced"]  === 'false' %>hide<% end %>">
         <%= render :partial => "site/advanced_search" %>
       </div>
     <% end %>
