--- a/public/app/views/search/repositories.html.erb
+++ b/public/app/views/search/repositories.html.erb
@@ -1,26 +1,34 @@
 <div class="content-pane">
   <div class="row-fluid">
     <div class="span3">
-      
+      <%= render :partial => "search/filter" %>
     </div>
     <div class="span9">
       <div class="record-pane">
-        <ul class="results-list">
-          <% @repositories.each do |repository| %>
-            <li class="result">
-              <h3>
-                <%= icon_for "repository" %>
-                <%= link_to repository['repo_code'], :controller => :search, :action => :repository, :repo_id => repository.id %>
-              </h3>
-              <div class="result-summary">
-                <div class="label label-info pull-right"><%=  I18n.t("repository._html.singular") %></div>
-                <p class="">
-                  <%= repository['name'] %>
-                </p>
-              </div>
-            </li>
-          <% end %>
-        </ul>
+        <% if @search_data.results? %>
+          <%= render :partial => "search/pagination_summary" %>
+          <ul class="results-list">
+            <% @search_data['results'].each do |result| %>
+              <%
+                 id = JSONModel(result["primary_type"]).id_for(result['uri'])
+              %>
+              <li class="result">
+                <h3>
+                  <%= icon_for result["primary_type"] %>
+                  <%= link_to result['title'], :controller => :search, :action => :repository, :repo_id => id %>
+                </h3>
+                <div class="result-summary">
+                  <%= render :partial => "search/result_summary_#{result["primary_type"]}", :locals => {:obj => result} %>
+                </div>
+              </li>
+            <% end %>
+          </ul>
+          <%= render :partial => "search/pagination" %>
+        <% else %>
+          <p class="alert alert-info">
+            <%= I18n.t("search_results.no_results") %></em>.
+          </p>
+        <% end %>
       </div>
     </div>
   </div>
