WIP Remove setup_context (not used) and begin using set_title... but first need to consolidate I18n locales

--- a/public/app/views/errors/404.html.erb
+++ b/public/app/views/errors/404.html.erb
@@ -1,6 +1,5 @@
-<%=
-  @breadcrumbs = []
-  setup_context :title => I18n.t("errors.error_404"), :suppress_breadcrumb => true
+<%
+  set_title I18n.t("errors.error_404")
 %>
 
 <div class="alert alert-error">
