Disable repository deletion for the time being

--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -50,7 +50,7 @@
         <% end %>
         <% if show_title_column? %>
           <td>
-            <% if result['primary_type'] === "repository" and session[:repo] === result['id'] %><span class="label label-success"><%= I18n.t("repository._html.messages.selected_short") %></span><% end %>
+            <% if result['primary_type'] === "repository" and session[:repo] === result['id'] %><span class="label label-success"><%= I18n.t("repository._frontend.messages.selected_short") %></span><% end %>
             <% if result["suppressed"] %><span class="label label-info"><%= I18n.t("states.suppressed") %></span><% end %>
             <% if deleted %><span class="label label-important"><%= I18n.t("states.deleted") %></span><% end %>
             <%=  result["title"] || result['display_string'] %>
