--- a/frontend/app/views/repositories/_toolbar.html.erb
+++ b/frontend/app/views/repositories/_toolbar.html.erb
@@ -12,7 +12,8 @@
             <button type="submit" class="btn btn-small btn-success"><%= I18n.t("repository._frontend.action.select") %></button>
           <% end %>
         <% end %>
-        <% if user_can?('delete_repository') %>
+        <%# Repository deletion is disabled for the time being until the semantics we want are fully worked out. %>
+        <% if false && user_can?('delete_repository') %>
           <div class="btn-group">
             <div class="btn btn-inline-form">
               <%= link_to I18n.t("actions.delete"),
